0.04
 - Fix bugtracker.

0.03 2020-08-11T15:50:26+02:00
 - Fix test dependencies.

0.02 2020-08-09T14:57:52+02:00
 - Improve SEE ALSO section in doc.
 - Improve SYNOPSIS section in doc.
 - Remove obsolete module from SEE ALSO section in doc.

0.01 2020-08-09T12:06:25+02:00
 - First version.