@@ -1,5 +1,6 @@
 .travis.yml
 Changes
+examples/ex1.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
