@@ -22,6 +22,7 @@ meta-spec:
 name: CSS-Struct
 no_index:
   directory:
+    - examples
     - inc
     - t
     - xt
