@@ -1,4 +1,5 @@
 0.04
+ - Add EXAMPLE to CSS::Struct::Output::Raw doc.
  - Fix bugtracker.
 
 0.03 2020-08-11T15:50:26+02:00
